--- a/Changes.txt
+++ b/Changes.txt
@@ -4,3 +4,4 @@
 - Agregacion de Icono al lado de la ventana
 - Solucion de errores de PascalCase
 - Correcion de imports al mover los files de lugar
+- Crear Componente para rehusar FormType
